PMA-777 | fix change status flow for reviews